# eo-llm-disaster

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: load_news.py
src/eo_disaster_analyzer/: config.py
src/eo_disaster_analyzer/data/: extractors.py  preprocessing.py  providers.py  pygooglenews.py
src/eo_disaster_analyzer/llm/: clients.py  prompts.py  query_parser.py  schemas.py
