[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eo_disaster_analyzer"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A package for analyzing Earth Observation data for disaster management using LLMs."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
]

# Keep core minimal
dependencies = [
    "numpy",
    "pandas",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "loguru",
]

[project.optional-dependencies]
geo = [
    "rasterio>=1.3",
    "geopandas>=0.12",
    "shapely>=2.0",
    "sentinelhub-py",
]

llm = [
    "openai",
    "langchain-core>=0.3",
    "langchain-openai>=0.1",
    "transformers>=4.37",
]

ml = [
    "torch",
    "torchvision",
    "Pillow",
]

news = [
    "feedparser>=6.0",     # Explicitly force a modern version of feedparser
    "spacy>=3.5",
]

api = [
    "fastapi",
    "uvicorn[standard]",
]

cli = [
    "typer[all]", # Includes 'rich' for pretty printing
]

all = [
    # This group includes all optional runtime dependencies
    "rasterio>=1.3",
    "geopandas>=0.12",
    "shapely>=2.0",
    #"sentinelhub-py",
    "openai",
    "langchain-core>=0.3",
    "langchain-openai>=0.1",
    "transformers>=4.37",
    "torch",
    "torchvision",
    "Pillow",
    "feedparser>=6.0",
    "spacy>=3.5",
    "fastapi",
    "uvicorn[standard]",
    "typer[all]",
]

dev = [
    # This group includes everything in 'all' plus development tools
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
    "eo-disaster-analyzer[all,notebook]",
]

notebook = [
    "jupyterlab",
    "matplotlib",
    "seaborn",
]

[project.scripts]
eo-analyzer = "eo_disaster_analyzer.cli:app"
